--- a/index.html
+++ b/index.html
@@ -8,20 +8,41 @@
   </head>
   <body>
     <div class="container">
+      <div class="nameContainer">
+        <p class="name">Mehmood Alam</p>
+      </div>
       <div class="clock">
-        <span style="--i: 1"><b>1</b></span>
-        <span style="--i: 2"><b>2</b></span>
+        <div style="--clr: #ff3d58; --h: 65px; --w: 4px" id="hour" class="hand">
+          <i></i>
+        </div>
+        <div
+          style="--clr: #00a658; --h: 84px; --w: 4px"
+          id="minute"
+          class="hand"
+        >
+          <i></i>
+        </div>
+        <div
+          style="--clr: #ffffff; --h: 94px; --w: 2px"
+          id="second"
+          class="hand"
+        >
+          <i></i>
+        </div>
+        <span style="--i: 1"><b>.</b></span>
+        <span style="--i: 2"><b>.</b></span>
         <span style="--i: 3"><b>3</b></span>
-        <span style="--i: 4"><b>4</b></span>
-        <span style="--i: 5"><b>5</b></span>
+        <span style="--i: 4"><b>.</b></span>
+        <span style="--i: 5"><b>.</b></span>
         <span style="--i: 6"><b>6</b></span>
-        <span style="--i: 7"><b>7</b></span>
-        <span style="--i: 8"><b>8</b></span>
+        <span style="--i: 7"><b>.</b></span>
+        <span style="--i: 8"><b>.</b></span>
         <span style="--i: 9"><b>9</b></span>
-        <span style="--i: 10"><b>10</b></span>
-        <span style="--i: 11"><b>11</b></span>
+        <span style="--i: 10"><b>.</b></span>
+        <span style="--i: 11"><b>.</b></span>
         <span style="--i: 12"><b>12</b></span>
       </div>
     </div>
   </body>
+  <script src="app.js"></script>
 </html>
